[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/character/normal_detector.gd" type="Script" id=2]
[ext_resource path="res://Scenes/character/kinematic_character.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[node name="KinematicCharacter" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )
boost_number = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -15 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="NormalRaycast" type="RayCast2D" parent="."]
enabled = true
collide_with_areas = true

[node name="NormalDetector" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NormalDetector"]
shape = SubResource( 2 )
